--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,7 +1,7 @@
 
 {% extends "base.html" %}
 
-{% block title %}Accueil - Password Manager{% endblock %}
+{% block title %}Accueil - Gestionnaire de Mots de Passe{% endblock %}
 
 {% block content %}
 <div class="row align-items-center min-vh-70">
@@ -11,7 +11,7 @@
         </h1>
         <p class="lead mt-3">
             Stockez, gérez et vérifiez vos mots de passe en toute sécurité.
-            Chiffrement AES-256, vérification API et interface intuitive.
+            
         </p>
         
         <div class="mt-5">
